# SolarStorageCalculator

./: helpers.js  index.html  pyproject.toml
solarcalc/: app.py  helpers.py
solarcalc/templates/: index.html
test/: test_data_parser.py
