[tool.poetry]
name = "solarcalc"
version = "0.1.0"
description = "Calculator to compute whether it is worth to invesa battery for your home with solar panels."
authors = ["Max Spahn <m.spahn@tudelft.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^3.0.0"
bokeh = "^3.1"

[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
pytest = "^7.4.4"
pylint = "^3.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
